add UpdateUserRequest and metod in UserController
